@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

class Application {
    - Document document_
    - DocumentController controller_
    - DocumentView view_

    + createNewDocument()
    + importDocument(file_path)
    + exportDocument(file_path)
    + createRectangle()
    + createCircle()
    + createLine()
    + deletePrimitive(index)
    + render()
}

class DocumentController {
    - Document& document_

    + createNewDocument()
    + addPrimitive(primitive)
    + removePrimitive(index)
}

class DocumentView {
    - Document& document_

    + render()
}

class FileManager {
    + importDocument(file_path, document)
    + exportDocument(file_path, document)
    - readFile(file_path)
    - writeFile(file_path, content)
}

class PrimitiveFactory {
    + createRectangle()
    + createCircle()
    + createLine()
}

class Document {
    - vector<unique_ptr<GraphicPrimitive>> primitives_

    + addPrimitive(primitive)
    + removePrimitive(index)
    + clear()
    + primitives()
}

abstract class GraphicPrimitive {
    + draw()
    + type()
}

class Rectangle {
    - Point position_
    - double width_
    - double height_

    + draw()
    + type()
}

class Circle {
    - Point center_
    - double radius_

    + draw()
    + type()
}

class Line {
    - Point start_
    - Point end_

    + draw()
    + type()
}

class Point {
    + double x
    + double y
}

Application --> DocumentController
Application --> DocumentView
Application --> Document
Application --> FileManager
Application --> PrimitiveFactory

DocumentController --> Document
DocumentView --> Document
FileManager --> Document
PrimitiveFactory --> GraphicPrimitive

Document o-- GraphicPrimitive

GraphicPrimitive <|-- Rectangle
GraphicPrimitive <|-- Circle
GraphicPrimitive <|-- Line

Rectangle --> Point
Circle --> Point
Line --> Point

@enduml